--- a/src/App.css
+++ b/src/App.css
@@ -174,6 +174,16 @@ li a {
   overflow: hidden;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 @media only screen and (max-width: 688px) {
   .order-summery-card {
     text-align: center;
