--- a/src/App.css
+++ b/src/App.css
@@ -214,3 +214,14 @@ input[type="number"] {
     width: 80%;
   }
 }
+.footer-link li {
+  list-style: none;
+}
+.footer h4 {
+  color: #ec008c;
+  margin-left: 30px;
+  margin-top: 40px;
+}
+.footer {
+  margin-bottom: 50px;
+}
